# diplom

./: .env.dev  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: manage.py
app/core/: models.py  views.py
app/core/management/commands/: init_db_data.py
app/edu_programs/: __init__.py  admin.py  apps.py  const.py  models.py  signals.py  tasks.py  urls.py  views.py
app/edu_programs/api/: views.py
app/edu_programs/assets/js/: charts.js
app/edu_programs/commands/: update_metrics.py
app/edu_programs/migrations/: 0001_initial.py  0002_alter_program_document.py
app/edu_programs/models/: competencies.py  curriculum.py  education.py  institutions.py
app/edu_programs/parsers/: pdf_parsers.py  web_parsers.py
app/edu_programs/pdf_parsers/: base.py  competencies.py  content.py  disciplines.py  prof_standards.py  program_info.py
app/edu_programs/static/css/: dashboard.css
app/edu_programs/static/js/: programs_dashboard.js  programs_detail.js  standards_dashboard.js
app/edu_programs/templates/: base.html  home.html
app/edu_programs/templates/analytics/: dashboard.html
app/edu_programs/templates/dashboards/: programs_dashboard.html  programs_detail.html  programs_detail_report.html  programs_report.html  standards_dashboard.html
app/settings/: base.py  celery.py  urls.py
app/templates/: base.html
scripts/: start-dev.sh  start.sh
